--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tomato-timer",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"license": "GPL-3.0-or-later",
 	"scripts": {
 		"dev": "vite dev",
@@ -23,6 +23,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.56.0",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-svelte": "^2.35.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
