--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tomato-timer",
-	"version": "0.2.2",
+	"version": "0.3.0",
 	"license": "GPL-3.0-or-later",
 	"scripts": {
 		"dev": "vite dev",
@@ -25,6 +25,7 @@
 		"eslint": "^8.56.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-svelte": "^2.35.1",
+		"sass": "^1.74.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
